24082021-1 : Removed useless tiny screen breakpoint. Added max-width to prevent overflow in 2K and over

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -552,6 +552,7 @@ footer {
         position: absolute;
         top: 50px;
         width: 30%;
+        max-width: 600px;
         margin-left: 600px;
         background-color: transparent;
         @for $i from 2 through 10 {
@@ -635,9 +636,7 @@ footer {
 
 /* Chromium engine styling */ 
 @supports (width:-webkit-fill-available) { 
-    @media screen and (max-width: 320px)
-    {.restos__indv--new {left: 1%;}}
-    @media screen and (min-width: 320px) and (max-width: 500px)
+    @media screen and (min-width: 340px) and (max-width: 500px)
     {.restos__indv--new {left: 76%;}}
     @media screen and (min-width: 500px) and (max-width: 750px)
     {.restos__indv--new {left: 84%;}}
